[package]
name = "stor-age"
version = "0.3.2"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "show aging of directories"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/stor-age"
homepage = "https://github.com/idiv-biodiversity/stor-age"
repository = "https://github.com/idiv-biodiversity/stor-age"
keywords = ["storage", "age", "spectrum-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2018"

[dependencies]
atty = "^0.2"
bytesize = "^1"

[dependencies.bstr]
version = "^0.2"
optional = true

[dependencies.clap]
version = "^2"
features = ["wrap_help"]

[dependencies.tempfile]
version = "^3"
optional = true

[features]
default = []
spectrum-scale = ["bstr", "tempfile"]

[dev-dependencies]
assert_cmd = "^0.11"
predicates = "^1"
tempfile = "^3"
