[package]
name = "stor-age"
version = "0.4.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "show aging of directories"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/stor-age"
homepage = "https://github.com/idiv-biodiversity/stor-age"
repository = "https://github.com/idiv-biodiversity/stor-age"
keywords = ["storage", "age", "spectrum-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2018"

[dependencies]
atty = "^0.2"

[dependencies.bstr]
version = "^0.2"
optional = true

[dependencies.bytesize]
version = "^1"
optional = true

[dependencies.clap]
version = "^2"
features = ["wrap_help"]

[dependencies.prettytable-rs]
version = "^0.8"
optional = true
default_features = false
features = ["win_crlf"]

[dependencies.tempfile]
version = "^3"
optional = true

[features]
default = ["table"]
spectrum-scale = ["bstr", "tempfile"]
table = ["bytesize", "prettytable-rs"]

[dev-dependencies]
assert_cmd = "^0.12"
predicates = "^1"
tempfile = "^3"
