[package]
name = "stor-age"
version = "0.6.6"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "show aging of directories"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/stor-age"
homepage = "https://github.com/idiv-biodiversity/stor-age"
repository = "https://github.com/idiv-biodiversity/stor-age"
keywords = ["storage", "age", "spectrum-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
env_logger = "0.11"
is-terminal = "0.4"
log = "0.4"

[dependencies.bstr]
version = "1"
optional = true

[dependencies.bytesize]
version = "2"
optional = true

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated", "wrap_help"]

[dependencies.prettytable-rs]
version = "0.10"
optional = true
default-features = false
features = ["win_crlf"]

[dependencies.smooth]
version = "0.3"
optional = true

[dependencies.tempfile]
version = "3"
optional = true

[features]
default = ["table"]
spectrum-scale = ["bstr", "tempfile"]
table = ["bytesize", "prettytable-rs", "smooth"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2"
